--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,4 +7,34 @@ spring:
   config:
     import:
     - optional:configserver:http://config:config@localhost:8888
-    
+management:
+  endpoints:
+    web:
+      exposure:
+        include:
+        - info #returns general information. It might be custom data, build information or details about the latest commit.
+        - health #summarizes the health status of our application.
+        - auditevents #lists security audit-related events such as user login/logout. Also, we can filter by principal or type among other fields.
+        - beans #returns all available beans in our BeanFactory. Unlike /auditevents, it doesn’t support filtering.
+        - conditions #formerly known as /autoconfig, builds a report of conditions around autoconfiguration.
+        - configprops #allows us to fetch all @ConfigurationProperties beans.
+        - env #returns the current environment properties. Additionally, we can retrieve single properties.
+        - flyway #provides details about our Flyway database migrations.
+        - heapdump #builds and returns a heap dump from the JVM used by our application.
+        - liquibase #behaves like /flyway but for Liquibase.
+        - logfile #returns ordinary application logs.
+        - loggers #enables us to query and modify the logging level of our application.
+        - metrics # details metrics of our application. This might include generic metrics as well as custom ones.
+        - prometheus #returns metrics like the previous one, but formatted to work with a Prometheus server.
+        - scheduledtasks #provides details about every scheduled task within our application.
+        - sessions #lists HTTP sessions, given we are using Spring Session.
+        - shutdown #performs a graceful shutdown of the application.
+        - threaddump #dumps the thread information of the underlying JVM.
+
+  info:
+    env:
+      enabled: true
+    git:
+      enabled: true
+    java:
+      enabled: true
